# fsec-plotter

./: README.md  pyproject.toml
fsec_data_extractor/: pyproject.toml
fsec_data_extractor/src/F_SEC_data_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/fsec_extractor/: CNN_prediction_script.py  extractor.py  fsec_script.py  graph.py  graph_data_script.py  gui.py  import_plate_map.py  main.py  output.py  test
src/fsec_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
